_sass/style.scss
/* ... */
.search {
    .form-group:first-of-type {
        padding-right: 0;
    }
}

.gsfn_link:after {
    content: ' - '
}

.styled-table {
    border: none;
    border-bottom: 1px solid $Rule-grey;
    border-top: 1px solid $Form-top;
    border-collapse: separate;
    width: 100%;
    thead {
        background-color: #fff;
        th {
            color: $Dark-grey;
            font-weight: normal;
            text-transform: uppercase;
            white-space: nowrap;
            letter-spacing: 0.07em;
            vertical-align: bottom;
        }
    }
    tbody {
        background-color: $Form-fill;
        &:first-of-type tr:first-of-type {
            border-top: 1px solid #ddd;

        }
        tr {
            &:first-of-type td {
                border-top: none;
            }
            &.no-top-border td {
                border-top: none;
            }
            &.no-bottom-border td {
                border-bottom: none
            }
        }
        td {
            vertical-align: top;
            line-height: 2rem;
            border-bottom: 1px solid $Rule-grey;
            border-top: 6px solid #fff;
        }
    }
    td, th {
        padding: 5px 10px;
    }
}

.card {
    overflow: hidden;
    & > div {
        background: $Form-fill;
        padding-bottom: 10000px;
        margin-bottom: -10000px;
    }
    &:first-of-type > div {
        padding-top: 10px;
        img {
            margin-bottom: 20px;
        }
    }
    &.card-border-top {
        h4 {
            @extend .border-top;
            margin-top: 0;
            padding-top: 20px;

        }
    }
}

.preferred-developers {
    & > .col-md-3 {
        margin-top: 30px;
        background-color: $Form-fill;
        border-bottom: 2px solid #d7d7d7
    }
    & > .col-md-9 {
        margin-top: 30px;
        h1 {
            margin-top: 0;
        }
    }
}

.sm-section-nav {
    &.open {
        button {
            float: left;
        }
        .dropdown-menu {
            clear: left;
            position: static;
        }
    }
    .dropdown-menu {
        li a:hover {
            background-color: inherit;
        }
        ul {
            padding-left: 40px;
            padding-right: 20px;
        }
    }
}

.small-no-padding {
    @media(max-width: $screen-sm-max) {
        padding: 0;
    }
}

.section-nav-open {
    clear: left;
    padding-top: 1em;
}

.caption {
    font-family: 'source sans pro light', sans serif;
    font-size: 16px;
    color: #919195;
    line-height: 24px;
    padding-bottom: 20px;
    margin-bottom:20px;
    border-bottom: 1px $Rule-grey solid;
    img {
        margin-bottom: 20px;
        display:block;
    }
}

